--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <script src="assets/javascript/game.js"></script> 
 
     <title>Document</title>
     <div class="row">
@@ -20,11 +21,11 @@
     <div class="container">
         <div class="row top-row">
             <div class="col-md-4">
-    <img src="assets/images/the-boys.jpg" class="theBoys img-thumbnail" width="400px" >
+    <img src="assets/images/the-boys.jpg" id="theBoys" class="img-thumbnail" width="400px" >
             </div>
             <div class="col-md-4"><h1>VS.</h1></div>
-            <div class="col-md-4">
-                <img src="assets/images/CHOOSE.png" width="300px" >
+            <div class="col-md-4" id="select-opp">
+               
             </div>
     </div>
 
@@ -37,23 +38,23 @@
 
     <div class="row opp-rows">
         <div class="col-md-3">
-         <img src="assets/images/caveman.jpg" class="caveman img-thumbnail" width="300px">
+         <img src="assets/images/caveman.jpg" id="caveman" class="opp-btn img-thumbnail" width="300px">
         <h3>Sam "Caveman" Losco</h3>
         </div>
 
         <div class="col-md-3">
-        <img src="assets/images/officer-george-green.jpg" class="officer img-thumbnail" width="300px">
+        <img src="assets/images/officer-george-green.jpg" id="officer" class="opp-btn img-thumbnail" width="300px">
         <h3>Officer George Green</h3>
         </div>
 
      
             <div class="col-md-3">
-    <img src="assets/images/cyrus-twins.jpg" class="cyrus img-thumbnail" width="300px">
+    <img src="assets/images/cyrus-twins.jpg" id="cyrus" class="opp-btn img-thumbnail" width="300px">
     <h3>Cyrus, Terry & Dennis</h3>
             </div>
 
         <div class="col-md-3">
-    <img src="assets/images/lahey-randy.jpg" class="lahey img-thumbnail" width="300px">
+    <img src="assets/images/lahey-randy.jpg" id="lahey" class="opp-btn img-thumbnail" width="300px">
     <h3>Jim Lahey <br>
         & Randy Bobandy</h3>
             </div>
