added name to the opponent slot

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
             <div class="col-md-4">
                 <img src="assets/images/the-boys.jpg" id="theBoys" class="img-thumbnail" width="300px">
                 <br>
-                <h3>The Boys<button type="button" class="btn">Attack!</button></h3>
+                <h3>The Boys</h3><br><button type="button" class="btn">Attack!</button>
             </div>
             <div class="col-md-4">
                 <h1>VS.</h1>
             </div>
-            <div class="col-md-4" id="select-opp"><h3 id="opp-name"></h3></div>
+            <div class="col-md-4" ><span id="select-opp"></span><br><h4><span id="opp-name"></span></h4></div>
         </div>
 
         <div class="row score">
