some js code has been added, but not yet operational. Added some responsiveness to images and text for future phone optimization

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <title>Document</title>
     <div class="row">
-        <img src="assets/images/trailer-park-boys-header.png" width="800px" class="header-img">
+        <img src="assets/images/trailer-park-boys-header.png" width="800px" class="header-img img-responsive">
         <br>
         <p2>Battle in the Park</p2>
     </div>
@@ -27,7 +27,7 @@
             <div class="col-md-4">
                 <img src="assets/images/the-boys.jpg" id="theBoys" class="img-thumbnail" width="300px">
                 <br>
-                <h3>The Boys</h3><br><button type="button" class="btn">Attack!</button>
+                <h5>The Boys</h5><br><br><br><button type="button" class="btn">Attack!</button>
             </div>
             <div class="col-md-4">
                 <h1>VS.</h1>
