progress on the js code:

--- a/index.html
+++ b/index.html
@@ -71,25 +71,25 @@
 
 
 
-        <div class="row opp-rows">
+        <div class="row opp-rows" id="first">
             <div class="col-md-3">
-                <img src="assets/images/caveman.jpg" value="1" id="1" class="opp-btn img-thumbnail" width="300px">
-                <h3>Sam "Caveman" Losco</h3>
+                <span value="1" id="1" class="opp-btn" width="300px"></span>
+            <br><h3>Sam 'Caveman' Losco</h3>
             </div>
 
-            <div class="col-md-3">
-                <img src="assets/images/officer-george-green.jpg" id="2" class="opp-btn img-thumbnail" width="300px">
+            <div class="col-md-3" id="second">
+                <span id="2" class="opp-btn" width="300px"></span>
                 <h3>Officer George Green</h3>
             </div>
 
 
-            <div class="col-md-3">
-                <img src="assets/images/cyrus-twins.jpg" id="3" class="opp-btn img-thumbnail" width="300px">
+            <div class="col-md-3" id="third">
+                <span id="3" class="opp-btn" width="300px"></span>
                 <h3>Cyrus, Terry & Dennis</h3>
             </div>
 
-            <div class="col-md-3">
-                <img src="assets/images/lahey-randy.jpg" id="4" class="opp-btn img-thumbnail" width="300px">
+            <div class="col-md-3" id="fourth">
+                <span id="4" class="opp-btn" width="300px"></span>
                 <h3>Jim Lahey
                     <br> & Randy Bobandy</h3>
             </div>
